# ovie

./: .gitignore  .pre-commit-config.yaml  README.md  data.py  evaluate.py  inference_huggingface.ipynb  inference_local.ipynb  inference_minimal_example.ipynb  push_to_hub.py  pyproject.toml  train.py
.github/workflows/: pre-commit.yml
configs/: config_ovie.yaml
data_preparation/: format_dl3dv.py  preprocess_in_the_wild_images.py
disc/: __init__.py  dinodisc.py  discriminator.py  utils.py
models/: models.py  swiglu_ffn.py
moge2/moge/utils/: geometry_numpy.py
utils/: pose_enc.py  reprojections.py  rotation.py  utils.py
